--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/form": "^6.7.0",
+    "@angular-redux/router": "^7.0.0",
+    "@angular-redux/store": "^7.1.0",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -20,7 +23,7 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/router": "^5.2.6",
     "@ngrx/store": "^5.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
